cropper fixed

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2833,10 +2833,10 @@ a:hover {
 	/* height: 400px !important; */
 }
 
-.cropper-canvas img {
+/* .cropper-canvas img {
 	width: 100% !important;
 	height: 300px !important;
-}
+} */
 
 @media(max-width:992px) {
 	.modal-content {
